2000-05-23  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.c (free_list_length), hash.c (scm_hasher), macros.c
	(scm_macro_type), objects.c (scm_class_of), options.c
	(scm_options), print.c (scm_iprin1), strports.c (st_seek), throw.c
	(SCM_LAZY_CATCH_P):  Replace SCM_UNPACK_CAR appropriately.

2000-05-23  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (scm_macroexp, SCM_CEVAL, scm_force), tags.h:  Replace
	SCM_UNPACK_CAR with SCM_CELL_TYPE or SCM_CELL_WORD_0.

	* eval.c (scm_force):  Add documentation.

	* eval.c (scm_force, scm_cons_source):  Don't access cells via
	SCM_{SET}?C[AD]R unless they are known to be cons cells.

2000-05-23  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* strings.h (SCM_NSTRINGP, SCM_NRWSTRINGP), tags.h
	(SCM_NDOUBLE_CELLP), vectors.h (SCM_NVECTORP):  Deprecated.

	* gc.c (scm_igc), gc.h (SCM_PTR_MASK, SCM_PTR_LT):  Removed #ifdef
	nosve #endif conditionally compiled code.

2000-05-23  Michael Livshin  <mlivshin@bigfoot.com>

	* gc.c (scm_heap_seg_data_t): fixed comment for the `span' member.

2000-05-22  Michael Livshin  <mlivshin@bigfoot.com>

	* guile-doc-snarf.in: put the preprocessed file through sed to
	trim all lines to 1024 chars.  I hope it doesn't break anybody's
	sed.  we'll see.  (note: this is lossy trimming, i.e. the spill
	isn't wrapped around but actually chopped off.  this seemed to me
	safe because the current snarfer doesn't understand multi-line
	cookies anyway.  in the long term, it would be nice not to depend
	on AWK for anything.)

	* gc.h (SCM_[SET_]CELL_{WORD,OBJECT}, SCM_VALIDATE_CELL): reverted 
	the previous change to this macros, after deciding to torture the
	snarfer instead.

2000-05-21  Michael Livshin  <mlivshin@bigfoot.com>

	* gc.h (SCM_[SET_]CELL_{WORD,OBJECT}, SCM_VALIDATE_CELL): brought
 	the yucky, ugly and nasty conditional compilation back.  sorry,
 	but it was either that or requiring GAWK to build Guile.
	(lots of places): removed the code that implemented the old GC
 	scheme.
