@@ -91,7 +91,7 @@ SCM
 scm_markstream (SCM ptr)
 {
   int openp;
-  openp = SCM_UNPACK_CAR (ptr) & SCM_OPN;
+  openp = SCM_CELL_WORD_0 (ptr) & SCM_OPN;
   if (openp)
     return SCM_PACK (SCM_STREAM (ptr));
   else
@@ -584,15 +584,15 @@ SCM_DEFINE (scm_port_mode, "port-mode", 1, 0, 0,
 
   port = SCM_COERCE_OUTPORT (port);
   SCM_VALIDATE_OPPORT (1,port);
-  if (SCM_UNPACK_CAR (port) & SCM_RDNG) {
-    if (SCM_UNPACK_CAR (port) & SCM_WRTNG)
+  if (SCM_CELL_WORD_0 (port) & SCM_RDNG) {
+    if (SCM_CELL_WORD_0 (port) & SCM_WRTNG)
       strcpy (modes, "r+");
     else
       strcpy (modes, "r");
   }
-  else if (SCM_UNPACK_CAR (port) & SCM_WRTNG)
+  else if (SCM_CELL_WORD_0 (port) & SCM_WRTNG)
     strcpy (modes, "w");
-  if (SCM_UNPACK_CAR (port) & SCM_BUF0)
+  if (SCM_CELL_WORD_0 (port) & SCM_BUF0)
     strcat (modes, "0");
   return scm_makfromstr (modes, strlen (modes), 0);
 }
@@ -1296,11 +1296,11 @@ scm_print_port_mode (SCM exp, SCM port)
 {
   scm_puts (SCM_CLOSEDP (exp)
 	    ? "closed: "
-	    : (SCM_RDNG & SCM_UNPACK_CAR (exp)
-	       ? (SCM_WRTNG & SCM_UNPACK_CAR (exp)
+	    : (SCM_RDNG & SCM_CELL_WORD_0 (exp)
+	       ? (SCM_WRTNG & SCM_CELL_WORD_0 (exp)
 		  ? "input-output: "
 		  : "input: ")
-	       : (SCM_WRTNG & SCM_UNPACK_CAR (exp)
+	       : (SCM_WRTNG & SCM_CELL_WORD_0 (exp)
 		  ? "output: "
 		  : "bogus: ")),
 	    port);
